--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-	"name": "zara-mobile",
-	"version": "1.0.0",
-	"private": true,
-	"scripts": {
-		"dev": "webpack serve --mode development",
-		"build": "webpack --mode production",
-		"start": "pnpm dev",
-		"lint": "eslint .",
-		"lint:fix": "eslint . --fix"
-	},
-	"dependencies": {
-		"react": "^19.2.0",
-		"react-dom": "^19.2.0",
-		"react-router-dom": "^7.9.4"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.37.0",
-		"@types/node": "^24.7.2",
-		"@types/react": "^19.2.2",
-		"@types/react-dom": "^19.2.2",
-		"@typescript-eslint/eslint-plugin": "^8.42.0",
-		"@typescript-eslint/parser": "^8.42.0",
-		"cross-env": "^10.1.0",
-		"css-loader": "^7.1.2",
-		"dotenv-webpack": "^8.1.1",
-		"eslint": "^9.37.0",
-		"globals": "^16.4.0",
-		"html-webpack-plugin": "^5.6.4",
-		"style-loader": "^4.0.0",
-		"ts-loader": "^9.5.4",
-		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.1",
-		"webpack": "^5.102.1",
-		"webpack-cli": "^6.0.1",
-		"webpack-dev-server": "^5.2.2"
-	}
+  "name": "zara-mobile",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "webpack serve --mode development",
+    "build": "webpack --mode production",
+    "start": "pnpm dev",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
+  },
+  "dependencies": {
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.4"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "@types/node": "^24.7.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
+    "cross-env": "^10.1.0",
+    "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.1",
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0",
+    "html-webpack-plugin": "^5.6.4",
+    "prettier": "2.8.8",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
+    "webpack": "^5.102.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
+  }
 }
