--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "code-quality": "eslint . && prettier --check .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -29,6 +31,8 @@
     "eslint": "^9.37.0",
     "globals": "^16.4.0",
     "html-webpack-plugin": "^5.6.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.0",
     "prettier": "2.8.8",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.4",
@@ -37,5 +41,11 @@
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --fix"
+    ],
+    "*": "prettier --write --ignore-unknown"
   }
 }
