--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
     "start": "pnpm dev",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -20,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
@@ -32,9 +36,11 @@
     "globals": "^16.4.0",
     "html-webpack-plugin": "^5.6.4",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^14.0.0",
     "prettier": "2.8.8",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.1",
