--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.0",
+    "msw": "^2.0.11",
     "prettier": "2.8.8",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.1.2",
