--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "isolatedModules": true,
     "noEmit": false,
     "jsx": "react-jsx",
-    "module": "ESNext"
+    "module": "ESNext",
+    "baseUrl": ".",
+    "paths": { "@/*": ["src/*"] }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
